kube/waha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waha
  namespace: default
  labels:
    app: waha
spec:
  type: ClusterIP
  selector:
    app: waha
  ports:
  - name: http
    port: 80
    targetPort: 3000
