kube/waha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waha-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: waha.statuspage-benami.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: waha
            port:
              number: 80
  tls:
  - hosts:
    - waha.statuspage-benami.com
    secretName: waha-tls
